kustomize/bases/crunchy-cluster/monitoring-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-crunchydb-monitoring
  labels:
    postgres-operator.crunchydata.com/cluster: traction-database
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: traction-database
  ingress:
    - ports:
        - protocol: TCP
          port: 9187
      from:
        - namespaceSelector:
            matchLabels:
              environment: tools
              name: bc0192
  policyTypes:
    - Ingress
status: {}
